[gd_scene load_steps=7 format=3 uid="uid://cr67efsdcqrfo"]

[ext_resource type="Script" path="res://scripts/player_input.gd" id="1_8evf6"]
[ext_resource type="Texture2D" uid="uid://ciqmrkxpojdn4" path="res://assets/icons/delete.svg" id="2_jv5b0"]
[ext_resource type="PackedScene" uid="uid://18k6amslyk1v" path="res://scenes/filtered_option_button.tscn" id="3_6qq28"]
[ext_resource type="FontVariation" uid="uid://bt4v0q31h0w7t" path="res://resources/fonts/default-bold.tres" id="4_pdw5w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vs518"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yp67v"]
content_margin_left = 12.0
content_margin_right = 12.0

[node name="PlayerInput" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
script = ExtResource("1_8evf6")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_vs518")

[node name="Player" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="PlayerOption" parent="PanelContainer/Player" instance=ExtResource("3_6qq28")]
layout_mode = 2
size_flags_horizontal = 3
flat = true

[node name="PlayerResetButton" type="Button" parent="PanelContainer/Player"]
layout_mode = 2
theme_type_variation = &"ToolbarButton"
icon = ExtResource("2_jv5b0")

[node name="WeightInput" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
mouse_filter = 1
placeholder_text = "1"

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
theme_override_fonts/font = ExtResource("4_pdw5w")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yp67v")
text = "+20"
vertical_alignment = 1
